--- a/parameterized-typesystems.cabal
+++ b/parameterized-typesystems.cabal
@@ -23,25 +23,11 @@ source-repository head
 library
   hs-source-dirs:      src
   exposed-modules:     Control.Typecheckable
+                     , Control.Typecheckable.PureTypecheckable
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5 && < 0.6
-                     , data-ordlist
                      , either
                      , semigroups
-                     , bifunctors >= 5
                      , mtl
-                     , lens
-  -- ghc-options:         -Wall
-  --                      -fno-warn-type-defaults
-  --                      -fno-warn-unused-do-bind
+  ghc-options:         -Wall
   default-language:    Haskell2010
-  default-extensions:  ScopedTypeVariables
-                     , LambdaCase
-                     , TemplateHaskell
-                     , DeriveGeneric
-                     , DeriveDataTypeable
-                     , TypeFamilies
-                     , QuasiQuotes
-                     , TypeOperators
-                     , MultiParamTypeClasses
-                     , FunctionalDependencies
